# crawler_system_v1

./: .env  .gitignore  Dockerfile  README.md  check_cakeresume_nulls.py  check_db_data.py  check_null_parents.py  codebase.md  codebase.txt  database_migration.py  docker-compose-producer-network.yml  docker-compose-worker-network.yml  genenv.py  local.ini  mysql-network.yml  mysql.yml  portainer-network.yml  process_geocoded.py  process_json_to_db.py  pyproject.toml  rabbitmq-network.yml  requirements.txt  run_import_yes123_data.py  show_db_results.py  temp_check_updated_parents.py  temp_update_yes123_script.py  test_importer.py  update_skills.py  v0_crawler_local_test.md  v0_local_test.md
crawler/: check_crawler_config.py  config.py  logging_config.py  upload_duplicate_data_to_mysql.py  worker.py  yes123_response_debug.html
crawler/api_clients/: client_104.py
crawler/database/: connection.py  get_category_ids.py  models.py  pandas_sql_config.py  pandas_sql_demo.py  repository.py  schemas.py  temp_count_db.py  test_upload_data_to_mysql.py  (+1 more)
demo_file_cakeme/: parsers.py  strategies.py  tasks.py
demo_file_yees123/: parsers.py  strategies.py
docs/: development_manual.md  project_104_docker_manual.md  project_104_local_test_plan.md  project_1111_local_test_plan.md  project_cakeresume_local_test_plan.md  project_yes123_local_test_plan.md  rebuilding_manual.md
skill_tool/: 104_skill_category.csv  convert_csv_to_json.py  populate_skills_from_topic_tree.py  process_skill_lists.py  remove_json_fields.py  run_skill_extraction.py  skill_tool_manual.md
(+85 files in other folders)
