[project]
name = "crawler-jobs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "ruff>=0.12.5",
    "structlog>=25.4.0",
    "python-dotenv",
    "requests>=2.32.4",
    "pymysql==1.1.0",
    "tenacity>=8.2.3",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.41",
    "gitingest>=0.1.5",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "beautifulsoup4",
    "lxml",
]

[tool.ruff]
exclude = ["*.ipynb"]

[tool.pytest.ini_options]
python_files = "pytest_*.py"

[tool.setuptools]
packages = ["crawler", "skill_tool"]
